--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ 
+body {
+    font-size: 16px;
+    font-family: arial, sans-serif;
+}
+ 
+#root {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+ 
+.contenedor {
+    width: 90%;
+    max-width: 500px;
+    padding: 40px;
+    margin: 40px;
+    border-radius: 2px;
+    box-shadow: 0 0 50px rgba(0,0,0,.1);
 }
